--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 # Glob API URL
 VITE_GLOB_API_URL=/api
-VITE_GLOB_SERVE_API_URL=http://127.0.0.1:8088/api
+VITE_GLOB_SERVE_API_URL=
 
 VITE_APP_API_BASE_URL=http://127.0.0.1:3002/
-VITE_SERVE_API_BASE_URL=http://127.0.0.1:8088/
+VITE_SERVE_API_BASE_URL=
 
 # Whether long replies are supported, which may result in higher API fees
 VITE_GLOB_OPEN_LONG_REPLY=false
